fix: improves navbar readability on white backgrounds
Closes #22
Closes #27

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -17,6 +17,7 @@
   --base-background-color: #222;
   --base-font-color: var(--color-grey-100);
   --caption-font-color: var(--color-grey-400);
+  --navbar-background-color: rgba(34, 34, 34, 0.5);
 
   /// Fonts
   --font-family-sans-serif: 'Made Evolve Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
